--- a/index.html
+++ b/index.html
@@ -164,8 +164,70 @@
                     </div>
                 </div>
             </section>
+            <!-- Main-content-Ends-here -->
+
+
+            <!-- Copa-america -->
+            <div id="copa-news">
+                <h2 class=" copa-title">Copa America News</h2>
+                <article class="copa-article">
+                    <div class="copa-blog">
+                        <div class="copa-text">
+                            <h2>Brazil fan in Cox’s Bazar takes poison after Copa America final loss<h2>
+                                    <p>Dhaka Tribune 2-days Ago</p>
+                        </div>
+                        <div class="copa-image">
+                            <img src="img/boll-1.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="copa-blog">
+                        <div class="copa-text">
+                            <h2>Messi played Copa America final with injury, says coach<h2>
+                                    <p>The Daily star 5-days Ago</p>
+                        </div>
+                        <div class="copa-image">
+                            <img src="img/boll-4.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="copa-blog">
+                        <div class="copa-text">
+                            <h2>Barcelona wants to keep Lionel Messi, but La Liga may not allow it<h2>
+                                    <p>The Daily Star 2-days Ago</p>
+                        </div>
+                        <div class="copa-image">
+                            <img src="img/boll-3.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="copa-blog">
+                        <div class="copa-text">
+                            <h2>
+                                Copa America 2021 final: It’s Messi v Neymar, Argentina v Brazi<h2>
+                                    <p>Aldajira 3-days Ago</p>
+                        </div>
+                        <div class="copa-image">
+                            <img src="img/boll-2.jpg" alt="">
+                        </div>
+                    </div>
+
+
+                    <div class="copa-blog">
+                        <div class="copa-text">
+                            <h2>Brazil fan in Cox’s Bazar takes poison after Copa America final loss<h2>
+                                    <p>Dhaka Tribune 2-days Ago</p>
+                        </div>
+                        <div class="copa-image">
+                            <img src="img/boll-6.jpg" alt="">
+                        </div>
+                    </div>
+                </article>
+
+            </div>
         </main>
-        <!-- Main-content-Ends-here -->
+
+
         <!-- footer-start -->
         <footer class="footer">
             <div class="footer-items">
