--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <img src="images/players/player-9.png" alt="">
                             </div>
                             <div class="player-data">
-                                <h2>Kylian Mbappé</h2>
+                                <h2>Philippe Coutinho</h2>
                                 <p>To be fair, this is a minor complaint at this point in time, but Neymar is decidedly
                                     prone to opting to shoot with his right foot, even at the </p>
                             </div>
@@ -177,7 +177,7 @@
                                     <p>Dhaka Tribune 2-days Ago</p>
                         </div>
                         <div class="copa-image">
-                            <img src="img/boll-1.jpg" alt="">
+                            <img src="images/copa-images/boll-1.jpg" alt="">
                         </div>
                     </div>
 
@@ -187,7 +187,7 @@
                                     <p>The Daily star 5-days Ago</p>
                         </div>
                         <div class="copa-image">
-                            <img src="img/boll-4.jpg" alt="">
+                            <img src="images/copa-images/boll-3.jpg" alt="">
                         </div>
                     </div>
 
@@ -197,7 +197,7 @@
                                     <p>The Daily Star 2-days Ago</p>
                         </div>
                         <div class="copa-image">
-                            <img src="img/boll-3.jpg" alt="">
+                            <img src="images/copa-images/boll-6.jpg" alt="">
                         </div>
                     </div>
 
@@ -208,7 +208,7 @@
                                     <p>Aldajira 3-days Ago</p>
                         </div>
                         <div class="copa-image">
-                            <img src="img/boll-2.jpg" alt="">
+                            <img src="images/copa-images/boll-4.jpg" alt="">
                         </div>
                     </div>
 
@@ -219,7 +219,7 @@
                                     <p>Dhaka Tribune 2-days Ago</p>
                         </div>
                         <div class="copa-image">
-                            <img src="img/boll-6.jpg" alt="">
+                            <img src="images/copa-images/boll-5.jpg" alt="">
                         </div>
                     </div>
                 </article>
